fixed the env and post not shown issue

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=your_mongodb_connection_string_here
+MONGODB_URI=mongodb://localhost:27017/portfolio
 
 # Admin Challenge Questions - Set these to your desired answers
 ADMIN_Q1_ANSWER=typescript
